fix: settings alignment

--- a/frontend/src/components/profile/components/profile-edit/styles.module.scss
+++ b/frontend/src/components/profile/components/profile-edit/styles.module.scss
@@ -33,6 +33,7 @@
     font-weight: 400;
     cursor: pointer;
     height: 3rem;
+    margin-top: 3rem;
 
     &:hover {
       background-color: #366dc7;
